[tool.poetry]
name = "py-study"
version = "0.1.0"
description = ""
authors = ["cclkz <7847034+cclkz@user.noreply.gitee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
